# Quicksched

./: .clang-format  .clangd  .gitignore  Cargo.toml  Makefile  README.md  build.rs  qs  scx_quicksched
.github/workflows/: ci.yml  ppa.yml
debian/: changelog  control  copyright  rules
gui/: quicksched-gui
man/: scx_quicksched.1  scx_snap.1
packaging/: PKGBUILD  scx_quicksched.service  scx_quicksched.spec  scx_snap.service
scripts/: install-deps.sh
src/: main.rs  scx_quicksched.c  scx_snap.c
src/bpf/: scx_quicksched.bpf.c  scx_quicksched.h  scx_snap.bpf.c  scx_snap.h
