[package]
name = "scx_snap"
version = "0.1.0"
edition = "2021"
description = "Latency-optimized sched_ext BPF scheduler for interactive workloads"
license = "GPL-2.0"

[[bin]]
name = "scx_snap"
path = "src/main.rs"

[dependencies]
anyhow   = "1.0"
clap     = { version = "4", features = ["derive"] }
libbpf-rs = "0.26"
ctrlc    = "3"
log      = "0.4"
env_logger = "0.11"
plain    = "0.2"

[build-dependencies]
libbpf-cargo = "0.26"
